Fix the underline on the  active page in the nav bar on mobile.
Floating the nav items means the container div contains the full height of the nav items instead of cutting them off.

--- a/root/var/www/aspishakthomas.com/style.css
+++ b/root/var/www/aspishakthomas.com/style.css
@@ -34,6 +34,7 @@ a {
 }
 
 .nav-item {
+    float: left;
     font-size: 1.2rem;
     font-variant: small-caps;
     margin-right: 1rem;
